<resources>
    <string name="app_name">Hologram</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_live">LIVE</string>
    <string name="tab_schedule">Schedule</string>
    <string name="tab_archives">Archives</string>

    <string name="empty_item_live">No Live Streaming</string>

    <string name="schedule_header_today">Today</string>
    <string name="schedule_header_tomorrow">Tomorrow</string>

    <string name="fab_title">SORT BY</string>

    <string name="start_text">Started streaming</string>
    <string name="relative_time_start_stream_prefix">Started .</string>
    <string name="relative_time_start_stream_suffix" />
    <string name="current_viewer_count_unit">watching</string>
    <string name="current_viewer_count_unit_K">K watching</string>
    <string name="current_viewer_count_unit_M">M watching</string>
    <string name="current_viewer_premium">Premieres</string>
    <string name="view_count_unit">views</string>

    <string name="view_count_unit_K">K views</string>
    <string name="view_count_unit_M">M views</string>

    <string name="fab_text_start_time_live">Started</string>
    <string name="fab_text_viewer_live">Watching</string>

    <string name="fab_text_like_archives">Like</string>
    <string name="fab_text_update_archives">Date</string>
    <string name="fab_text_viewer_archives">View</string>

    <string name="chip_text_today_archives">Today</string>
    <string name="chip_text_yesterday_archives">Yesterday</string>

    <string name="policy">Privacy Policy</string>
    <string name="terms">Terms of Use</string>
    <string name="share">Share this app</string>
    <string name="not_found_share">There are no shareable apps</string>
    <string name="share_app_data">Check out the Streaming of Hololive Vtubers using Hologram, now available on the Play Store to rave reviews! \n\n https://cutt.ly/jQ4Tl24 \n\n #Hologram #ホロ・グラム</string>
    <string name="about_app">About this app</string>
    <string name="review">Post a review</string>
    <string name="try_beta">【AD】Try the Beta Version</string>
    <string name="preference">Setting</string>
    <string name="license">License</string>

    <string name="app_desc_title">What is Hologram?</string>
    <string name="app_desc">This app allows you to check the distribution status of holo-live Vtubers.</string>

    <string name="twemoji_license">This app uses graphics from Twitter Emoji licensed under CC-BY 4.0</string>

    <!--    Setting     -->
    <string name="setting_category_display">Display Setting</string>
    <string name="set_group_desc">Switching the display contents</string>
    <string name="set_group_hololive">Hololive</string>
    <string name="set_group_holostars">Holostars</string>
    <string name="set_group_all">All Member</string>
    <string name="setting_widget">Widget</string>
    <string name="set_widget_group_desc">Switching the display contents in the widget</string>

    <string name="time_notation">Time notation</string>
    <string name="time_notation_summary">Switches between 12-hour and 24-hour time notation.</string>
    <string name="time_notation_12hour">12-hour</string>
    <string name="time_notation_24hour">24-hour</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget_button_update">UPDATE</string>


    <string name="set_transition_desc">Select an app to open YouTube.</string>
    <string name="set_transition_youtube">YouTube App</string>
    <string name="set_transition_browser">Browser</string>


</resources>