<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_vf_item_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rounded_corners"
    android:orientation="vertical"
    android:weightSum="15">


    <!--android:flipInterval="1000"-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/shape_text_rounded"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/tab_live"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/widget_empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/empty_item_live"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <AdapterViewFlipper
        android:id="@+id/widget_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:autoStart="true"
        android:flipInterval="5000"
        android:loopViews="true">

    </AdapterViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/widget_button_update"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_button_update"
            android:drawablePadding="4dp"
            android:text="@string/widget_button_update"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/widget_button_back"
            android:layout_width="@dimen/widget_button_size"
            android:layout_height="@dimen/widget_button_size"
            android:background="@drawable/shape_button_circle"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <ImageButton
            android:id="@+id/widget_button_next"
            android:layout_width="@dimen/widget_button_size"
            android:layout_height="@dimen/widget_button_size"
            android:background="@drawable/shape_button_circle"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />


    </LinearLayout>


</LinearLayout>
