<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cidra.hologram.viewmodels.LiveViewModel" />
    </data>


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_tab_live_scene"
        tools:context="com.cidra.hologram.MainActivity">


        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:LoadingStatusText="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="現在配信中のアイテムはありません" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="144dp"
            android:layout_height="144dp"
            app:LoadingStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/SwipeRefresh_live"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onRefreshListener="@{viewModel::refresh}"
            app:refreshing="@{viewModel.isLoading}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/video_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:liveListData="@{viewModel.response}"
                tools:listitem="@layout/item_live" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/fab_viewer"
            app:layout_constraintEnd_toStartOf="@+id/fab_main">

            <TextView
                android:id="@+id/text_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fab_title"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/fab_main"
                app:layout_constraintEnd_toStartOf="@+id/fab_main" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_viewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:contentPadding="8dp"
            tools:layout_editor_absoluteY="624dp">

            <TextView
                android:id="@+id/text_viewer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fab_text_viewer_live"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/fab_viewer"
                app:layout_constraintEnd_toStartOf="@+id/fab_viewer" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:contentPadding="8dp"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="632dp">

            <TextView
                android:id="@+id/text_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fab_text_start_time_live"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/fab_main"
                app:layout_constraintEnd_toStartOf="@+id/fab_main" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_viewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="72dp"
            android:clickable="true"
            android:onClick="@{() -> viewModel.sortByViewer()}"
            android:src="@drawable/ic_baseline_visibility_24"
            app:fabCustomSize="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="72dp"
            android:clickable="true"
            android:onClick="@{() -> viewModel.sortByStartTime()}"
            android:src="@drawable/ic_baseline_schedule_24"
            app:fabCustomSize="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="72dp"
            android:src="@drawable/ic_baseline_sort_24"
            app:fabCustomSize="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/live_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>

